@@ -8,7 +8,9 @@ Lib/
 * Quick fix to ldif.is_dn() to let multi-valued RDNs pass as valid.
   Is too liberal in some corner-cases though...
 * ldap.open() now outputs a deprecation warning
-
+* New LDAP options available in OpenLDAP 2.4.18+ supported in
+  LDAPObject.get/set_option(): ldap.OPT_X_KEEPALIVE_IDLE,
+  ldap.OPT_X_KEEPALIVE_PROBES, ldap.OPT_X_KEEPALIVE_INTERVAL
 Modules/
 * 
 
